--- a/css/styles.css
+++ b/css/styles.css
@@ -471,9 +471,9 @@ h3.location {
 .highlight {
   font-weight: bolder;
 }
-.bonners,.dover,.bodie,.colburn,.kootenai,.about,.fighting,.tensed {
+.gravel *:not(a) {
   color:#000;
-  text-align: left;
+  /* text-align: left; */
 }
 .sandpoint {
   color:red;
@@ -481,6 +481,10 @@ h3.location {
 }
 .gravel {
   margin: 40px 0 0 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-between;
 }
 .quarry-hours {
   background-color: #073370;
