--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ nav.menu {
   text-align: center;
 }
 .menu {
-    background:URL('../img/menu-services-quarry-locations.jpg') no-repeat;
+    background:URL('/img/menu-services-quarry-locations.jpg') no-repeat;
     background-position: 50% 0;
     margin: 0 auto;
 }
@@ -266,12 +266,12 @@ a:hover.slidesjs-previous,a:hover.slidesjs-next,a:focus,a:focus.slidesjs-next {
   filter: alpha(opacity=100);
 }
 a.slidesjs-previous {
-  background:url('../img/leftArrow.png') no-repeat;
+  background:url('/img/leftArrow.png') no-repeat;
   left: -444px;
   top: -257px;
 }
 a.slidesjs-next {
-  background:url('../img/rightArrow.png') no-repeat;
+  background:url('/img/rightArrow.png') no-repeat;
   right: -444px;
   top: -257px;
 }
@@ -279,7 +279,7 @@ a.slidesjs-next {
   height:514px;
 }
 .quarry {
-  background:url('../img/footer.jpg') no-repeat center;
+  background:url('/img/footer.jpg') no-repeat center;
   height: 264px;
   margin: 26px auto;
 }
@@ -294,30 +294,30 @@ a.slidesjs-next {
   background-size: cover;
 }
 .featureOne {
-  background-image: url('../img/quarries-f1.jpg');
+  background-image: url('/img/quarries-f1.jpg');
   border-right: 5px solid #fff;
 }
 .featureTwo {
-  background-image: url('../img/services-f2.jpg');
+  background-image: url('/img/services-f2.jpg');
   border-right: 5px solid #fff; 
   border-left: 5px solid #fff;
 }
 .featureThree {
-  background-image: url('../img/logistics-f3.jpg');
+  background-image: url('/img/logistics-f3.jpg');
   border-left: 5px solid #fff;
 }
 .servicesOne {
-  background:url('../img/logistics-f3.jpg') no-repeat;
+  background:url('/img/logistics-f3.jpg') no-repeat;
   padding:50px;
   margin-bottom: 12px;
 }
 .servicesTwo {
-  background:url('../img/hauling-150728.jpg') no-repeat;
+  background:url('/img/hauling-150728.jpg') no-repeat;
   padding:50px;
   margin-bottom: 12px;
 }
 .servicesThree {
-  background:url('../img/custom-crushing-150728.jpg') no-repeat;
+  background:url('/img/custom-crushing-150728.jpg') no-repeat;
   padding:50px;  
   margin-bottom: 12px;
 }
@@ -393,7 +393,7 @@ h5 {
   text-align: left;
   margin-top: 229px;
   padding: 30px;
-  background:url('../img/hoverBG.png') repeat;
+  background:url('/img/hoverBG.png') repeat;
   cursor: pointer;
   /* overflow:hidden;
   padding: 9% 7% 7% 7%;
@@ -727,7 +727,7 @@ h3#returnmessage {
     width: 100%;    
   }
   .quarry {
-    background: url('../img/pitFooter.jpg');
+    background: url('/img/pitFooter.jpg');
     height:initial;
   }
   .footerTwo {
